codegen-sdk-cst-generator/src/generator/snapshots/codegen_sdk_cst_generator__generator__node__tests__get_children_field_impl.snap
---
source: codegen-sdk-cst-generator/src/generator/node.rs
expression: snapshot_tokens(&node.get_children_field_impl())
---
fn children(&self) -> Vec<Self::Child> {
    let mut children: Vec<_> = vec![];
    children
        .push(
            Self::Child::try_from(NodeTypes::from(self.test_field.as_ref().clone()))
                .unwrap(),
        );
    children.sort_by_key(|c| c.start_byte());
    children
}
