codegen-sdk-cst-generator/src/generator/snapshots/codegen_sdk_cst_generator__generator__node__tests__get_struct_tokens_complex.snap
---
source: codegen-sdk-cst-generator/src/generator/node.rs
expression: "snapshot_tokens(&node.get_struct_tokens(&HashSet::new()))"
---
#[derive(Debug, Eq, PartialEq, Clone, salsa::Update)]
pub struct TestNode<'db> {
    id: CSTNodeId<'db>,
    file_id: FileNodeId<'db>,
    start_byte: usize,
    end_byte: usize,
    start_position: Point<'db>,
    end_position: Point<'db>,
    #[debug(ignore)]
    buffer: Arc<Bytes>,
    is_error: bool,
    pub multiple_field: Vec<indextree::NodeId>,
    pub optional_field: Option<indextree::NodeId>,
    pub required_field: indextree::NodeId,
}
impl<'db> FromNode<'db, NodeTypes<'db>> for TestNode<'db> {
    fn from_node(
        context: &mut ParseContext<'db, NodeTypes<'db>>,
        node: tree_sitter::Node,
    ) -> Result<(Self, Vec<indextree::NodeId>), ParseError> {
        let start_position = Point::from(context.db, node.start_position());
        let end_position = Point::from(context.db, node.end_position());
        let id = CSTNodeId::new(context.db, context.file_id, node.id(), context.root);
        let mut ids = Vec::new();
        let multiple_field = get_multiple_children_by_field_name::<
            NodeTypes<'db>,
            TestType<'db>,
        >(context, &node, "multiple_field")?;
        for child in multiple_field.iter().cloned() {
            ids.push(child);
        }
        let optional_field = get_optional_child_by_field_name::<
            NodeTypes<'db>,
            TestType<'db>,
        >(context, &node, "optional_field")?;
        if let Some(child) = optional_field.clone() {
            ids.push(child);
        }
        let required_field = get_child_by_field_name::<
            NodeTypes<'db>,
            TestType<'db>,
        >(context, &node, "required_field")?;
        ids.push(required_field.clone());
        Ok((
            Self {
                start_byte: node.start_byte(),
                end_byte: node.end_byte(),
                start_position: start_position,
                end_position: end_position,
                buffer: context.buffer.clone(),
                is_error: node.is_error(),
                id,
                file_id: context.file_id.clone(),
                multiple_field,
                optional_field,
                required_field,
            },
            ids,
        ))
    }
}
impl<'db> TestNode<'db> {
    const KIND_NAME: &'static str = "test_node";
    pub fn multiple_field(
        &self,
        tree: &'db Tree<NodeTypes<'db>>,
    ) -> Vec<&TestType<'db>> {
        self.multiple_field
            .iter()
            .map(|id| tree.get(id).unwrap().as_ref().try_into().unwrap())
            .collect()
    }
    pub fn optional_field(
        &self,
        tree: &'db Tree<NodeTypes<'db>>,
    ) -> Option<&TestType<'db>> {
        if let Some(id) = self.optional_field {
            Some(tree.get(&id).unwrap().as_ref().try_into().unwrap())
        } else {
            None
        }
    }
    pub fn required_field(&self, tree: &'db Tree<NodeTypes<'db>>) -> &TestType<'db> {
        tree.get(&self.required_field).unwrap().as_ref().try_into().unwrap()
    }
}
impl<'db> CSTNode<'db> for TestNode<'db> {
    fn kind_name(&self) -> &str {
        &Self::KIND_NAME
    }
    fn start_byte(&self) -> usize {
        self.start_byte
    }
    fn end_byte(&self) -> usize {
        self.end_byte
    }
    fn start_position(&self) -> Point<'db> {
        self.start_position
    }
    fn end_position(&self) -> Point<'db> {
        self.end_position
    }
    fn buffer(&self) -> &Bytes {
        &self.buffer
    }
    fn kind_id(&self) -> u16 {
        0u16
    }
    fn is_error(&self) -> bool {
        self.is_error
    }
    fn is_named(&self) -> bool {
        true
    }
    fn id(&self) -> CSTNodeId<'db> {
        self.id
    }
    fn file_id(&self) -> FileNodeId<'db> {
        self.file_id
    }
}
impl<'db1> HasChildren<'db1, NodeTypes<'db1>> for TestNode<'db1> {
    type Child<'db2> = TestNodeChildrenRef<'db2> where Self: 'db2;
    fn children<'db2>(
        &'db2 self,
        context: &'db2 Tree<NodeTypes<'db2>>,
    ) -> Vec<Self::Child<'db2>> {
        let mut children: Vec<Self::Child<'db2>> = vec![];
        children
            .extend(
                self
                    .multiple_field
                    .iter()
                    .map(|child| {
                        context.get(child).unwrap().as_ref().try_into().unwrap()
                    }),
            );
        if let Some(child) = self.optional_field.as_ref() {
            children.push(context.get(child).unwrap().as_ref().try_into().unwrap());
        }
        children
            .push(
                context.get(&self.required_field).unwrap().as_ref().try_into().unwrap(),
            );
        children.sort_by_key(|c| c.start_byte());
        children
    }
    fn children_by_field_name<'db2>(
        &'db2 self,
        context: &'db2 Tree<NodeTypes<'db2>>,
        field_name: &str,
    ) -> Vec<Self::Child<'db2>> {
        match field_name {
            "multiple_field" => {
                self.multiple_field
                    .iter()
                    .map(|child| {
                        context.get(child).unwrap().as_ref().try_into().unwrap()
                    })
                    .collect()
            }
            "optional_field" => {
                self.optional_field
                    .as_ref()
                    .iter()
                    .map(|child| {
                        context.get(child).unwrap().as_ref().try_into().unwrap()
                    })
                    .collect()
            }
            "required_field" => {
                vec![
                    context.get(& self.required_field).unwrap().as_ref().try_into()
                    .unwrap()
                ]
            }
            _ => vec![],
        }
    }
    fn children_by_field_id<'db2>(
        &'db2 self,
        context: &'db2 Tree<NodeTypes<'db2>>,
        field_id: u16,
    ) -> Vec<Self::Child<'db2>> {
        match field_id {
            1u16 => {
                self.multiple_field
                    .iter()
                    .map(|child| {
                        context.get(child).unwrap().as_ref().try_into().unwrap()
                    })
                    .collect()
            }
            1u16 => {
                self.optional_field
                    .as_ref()
                    .iter()
                    .map(|child| {
                        context.get(child).unwrap().as_ref().try_into().unwrap()
                    })
                    .collect()
            }
            1u16 => {
                vec![
                    context.get(& self.required_field).unwrap().as_ref().try_into()
                    .unwrap()
                ]
            }
            _ => vec![],
        }
    }
}
impl<'db> std::hash::Hash for TestNode<'db> {
    fn hash<H: std::hash::Hasher>(&self, state: &mut H) {
        self.id.hash(state);
    }
}
impl<'db> PartialOrd for TestNode<'db> {
    fn partial_cmp(&self, other: &Self) -> Option<std::cmp::Ordering> {
        Some(self.cmp(other))
    }
}
impl<'db> Ord for TestNode<'db> {
    fn cmp(&self, other: &Self) -> std::cmp::Ordering {
        let res = self.start_byte().cmp(&other.start_byte());
        if res == std::cmp::Ordering::Equal {
            self.end_byte().cmp(&other.end_byte())
        } else {
            res
        }
    }
}
